...
    android:textColor="@android:color/black"
    android:textSize="45sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <NumberPicker
    android:id="@+id/daily_wellness_number_picker"
    android:layout_width="143dp"
    android:layout_height="135dp"
    android:layout_marginTop="44dp"
    app:layout_constraintStart_toStartOf="@+id/daily_wellness_question"
    app:layout_constraintTop_toBottomOf="@+id/daily_wellness_title"/>
  <TextView
...
    android:text="@string/daily_wellness_rating"
    android:textSize="35sp"
    android:textColor="@color/text_regular"
    app:layout_constraintStart_toEndOf="@+id/daily_wellness_number_picker"
    app:layout_constraintTop_toBottomOf="@+id/daily_wellness_title"/>
  <Button
    android:id="@+id/daily_wellness_button"
    style="@style/Widget.AppCompat.Button"
    android:layout_width="197dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:background="@drawable/ic_button_rectangle"
...
