...
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/edu_button"
    app:layout_constraintBottom_toBottomOf="@+id/Journal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/Lesson"/>
  <Button
    android:id="@+id/DailyWellness"
    android:layout_width="100dp"
    android:layout_height="70dp"
    android:layout_marginTop="75dp"
    android:layout_marginStart="75dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/daily_wellness_button"
...
