<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ActivityActivity">

  <android.support.design.widget.BottomNavigationView
    android:id="@+id/core_navigation"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/res_green"
    app:elevation="0dp"
    app:itemBackground="@color/res_green"
    app:itemHorizontalTranslationEnabled="false"
    app:itemIconTint="@android:color/black"
    app:itemTextColor="@android:color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:menu="@menu/core_navigation"/>

</android.support.constraint.ConstraintLayout>